--- a/popup.html
+++ b/popup.html
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
 <html>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-<body style="width: 100px">
+<body>
  	<h3>Meetup Events Filter</h3>
     
+ 	<form>  
+ 	  <div class="form-group">
+ 	    <label for="sel1">Minimum Attendees</label>
+ 	    <select class="form-control" input-sm id="trigger_val" type="number">
+ 	      <option>5</option>
+ 	      <option>10</option>
+ 	      <option>15</option>
+ 	      <option>20</option>
+ 	      <option>25</option>
+ 	      <option>30</option>
+ 	      <option>40</option>
+ 	      <option>50</option>
+ 	      <option>60</option>
+ 	      <option>70</option>
+ 	    </select>
+ 	  </div>
+ 	  <div class="form-group">
+ 	      <label for="inputsm">Custom Size:</label>
+ 	      <input class="form-control input-sm" id="trigger_val" type="number">
+ 	    </div> 	  
+ 	<input type="button" id="clickactivity" value="Submit">
+</form>
+
+<div class="btn-group">
+  <button type="button" class="btn btn-danger">Action</button>
+  <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown">
+    <span class="caret"></span>
+    <span class="sr-only">Toggle Dropdown</span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">Action</a></li>
+    <li><a href="#">Another action</a></li>
+    <li><a href="#">Something else here</a></li>
+    <li class="divider"></li>
+    <li><a href="#">Separated link</a></li>
+  </ul>
+</div>
 
  	<form id="form1">
  	Number: <input type="number" id="trigger_val" ><br>
  	<input type="button" id="clickactivity" value="Submit">
  	</form>
+
+ 	<a href="options.html"> Set Options </a>
 
   <!-- Min. # of Attendees: <input type="number" name="a" id="clickactivity"><br>
   <button onclick="injectTheScript(document.getElementById('clickactivity').value)">Filter 
